--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
     "vue": "^3.0.5",
+    "vue-ico": "^1.0.15",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^4.0.6"
   },
   "devDependencies": {
