--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
+    "firebase": "^8.6.2",
+    "moment": "^2.29.1",
     "vue": "^3.0.5",
     "vue-ico": "^1.0.15",
     "vue-material": "^1.0.0-beta-15",
