--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.4.1",
-    "vue": "^3.0.5",
+    "bootstrap-vue": "^2.21.2",
+    "vue": "^3.0.11",
     "vue-ico": "^1.0.15",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^4.0.6"
