--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.0.11",
     "vue-ico": "^1.0.15",
     "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^4.0.6"
+    "vue-router": "^4.0.6",
+    "vue-sweetalert2": "^4.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.1",
